--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -14,9 +14,9 @@ task integTestJar (type:Jar) {
     appendix = 'integ-tests'
 }
 dependencies {
-lrgConfig project(':savedsearch-web') { transitive = false }
+lrgConfig project(':savedsearch-web') 
 	lrgConfig project(':savedsearch-entities'){ transitive = false }
-	lrgConfig project(':savedsearch-core')  { transitive = false }
+//	lrgConfig project(':savedsearch-core') 
 	lrgConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
 	//lrgConfig(group: 'javax', name: 'ejb', version: '3.2.0'){ transitive = false }
 	lrgConfig(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){ transitive = false }
@@ -28,11 +28,11 @@ lrgConfig project(':savedsearch-web') { transitive = false }
 	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){ transitive = false }
 	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){ transitive = false }
 	
-	lrgConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){ transitive = false }
-	lrgConfig(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3'){ transitive = false }
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1'){ transitive = false }
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){ transitive = false }
-	lrgConfig(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){ transitive = false }
+//	lrgConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){ transitive = false }
+//	lrgConfig(group: 'org.hamcrest', name:'hamcrest-core', version: '1.3'){ transitive = false }
+//	lrgConfig(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1'){ transitive = false }
+//	lrgConfig(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){ transitive = false }
+//	lrgConfig(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){ transitive = false }
 
 
  	lrgConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
@@ -40,13 +40,13 @@ lrgConfig project(':savedsearch-web') { transitive = false }
 
 
 	
-	lrgConfig(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
-	lrgConfig(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){ transitive = false }
+//	lrgConfig(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
+//	lrgConfig(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){ transitive = false }
 	
-	lrgConfig(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){ transitive = false }
-	lrgConfig(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0'){ transitive = false }
-	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1'){ transitive = false }
-	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0'){ transitive = false }
+//	lrgConfig(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){ transitive = false }
+//	lrgConfig(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0'){ transitive = false }
+//	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1'){ transitive = false }
+//	lrgConfig(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.0'){ transitive = false }
         lrgConfig(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2'){ transitive = false }
 
 }
