--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -36,14 +36,13 @@ dependencies {
 
         compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
         compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){transitive = false}
-        compile(group: 'log4j', name: 'log4j', version: '1.2.17'){transitive = false}
+        compile(group: 'log4j', name: 'log4j', version: '1.2.16'){transitive = false}
     compile(group: 'emaas.platform', name: 'registry-client', version: '0.23.6'){transitive = false}
         compile(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6'){transitive = false}
-        compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1'){transitive = false}
-        compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1'){transitive = false}
+        compile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
+        compile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
         compile(group: 'com.jayway.restassured', name:'xml-path', version:'1.9.0'){transitive = false}
         compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
-        compile(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){transitive = false}
         compile(group: 'com.jayway.restassured', name:'json-path', version:'1.8.1'){transitive = false}
         compile(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
 
