--- a/tests/suites/emcpssf_update_test.gradle
+++ b/tests/suites/emcpssf_update_test.gradle
@@ -50,11 +50,17 @@ repositories {
             url = "${artifactory_contextUrl}/repo" }
     }
 dependencies {
-    lrgConfig(group: 'com.oracle.emcpssf.integTest', name: 'savedsearch-tools-integ-tests', version: '0.1')
+    testConfig(group: 'com.oracle.emcpssf.integTest', name: 'savedsearch-tools-integ-tests', version: '0.1'){
+exclude('module':'groovy')
+}
+configurations{
+restAssured.exclude module: 'groovy'
+}
+
 }
      task UPDATETest(type:EMTest){
-include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/**'
+include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/*'
 include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/common/*'
-include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/updatesearchexception*'
+include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/updatesearchexception/*'
 }
      task emcpssf_update_test (dependsOn:UPDATETest)
