--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -27,7 +27,7 @@ lrgConfig(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){trans
 //	lrgConfig(group: 'javax', name: 'ejb', version: '3.2.0')
 
 //	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8'){ transitive = false }
-//    	lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
+    	lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
 //    	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12'){ transitive = false }
 //    	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){ transitive = false }
 //    	lrgConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){ transitive = false }
