--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -1,4 +1,4 @@
-jar.archiveName='emcpssf_qa_test.jar'
+//jar.archiveName='emcpssf_qa_test.jar'
 group = 'com.oracle.emaas.emcpssf'
 version = '1.0.1'
 
@@ -14,8 +14,7 @@ task integTestJar (type:Jar) {
     appendix = 'integ-tests'
 }
 dependencies {
-
-lrgConfig project(':savedsearch-web') 
+lrgConfig project(':savedsearch-web'){ transitive = false } 
 	lrgConfig project(':savedsearch-entities'){ transitive = false }
 //	lrgConfig project(':savedsearch-core') 
 
