--- a/tests/suites/emcpssf_dev_test_3n.gradle
+++ b/tests/suites/emcpssf_dev_test_3n.gradle
@@ -53,16 +53,60 @@ dependencies {
     testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core-integ-tests', version: '1.0.1'){
 exclude('module':'groovy')
 }
+testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
 configurations{
 restAssured.exclude module: "groovy"
 
 }
-
 }
-     task DEVTest(type:EMTest){
+
+task copyDependencies(type: Copy) {
+    from configurations.lrgConfig
+    into System.env.T_WORK
+}
+
+task small_deploy_3n_block(type: EMTest) {
+    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
+    options.suiteXmlBuilder().suite('name': 'lrgemcpdf_dev_test_3n') {
+        test('name': 'emaas_setup_small_deploy') {
+            classes([:]) {
+                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
+                    methods([:]) {
+                        'include' ('name': 'setupEmaasSmallDeploy')
+                    }
+                }
+        //      'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSanityTests')
+            }
+        }
+    }
+    useWebdriver = true
+    useRestAssured = true
+}
+
+
+
+
+
+     task DEVTest(type:EMTest,dependsOn: small_deploy_3n_block){
 include "oracle/sysman/emaas/savedsearch/*"
 useRestAssured =true
 }
+task small_deploy_3n_cleanup(type: EMTest) {
+    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
+    options.suiteXmlBuilder().suite('name': 'lrgemctas_uitsts_3n') {
+        test('name': 'emaas_setup_small_deploy') {
+            classes([:]) {
+                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
+                    methods([:]) {
+                        'include' ('name': 'logCollectionAndPostCleanup')
+                    }
+                }
+            }
+        }
+    }
+ mustRunAfter ([small_deploy_3n_block,DEVTest])
+}
 
-task emcpssf_dev_test (dependsOn: DEVTest)
+
+task emcpssf_dev_test_3n (dependsOn: [DEVTest, small_deploy_3n_cleanup])
 
