--- a/tests/suites/emcpssf_update_test_3n.gradle
+++ b/tests/suites/emcpssf_update_test_3n.gradle
@@ -53,14 +53,61 @@ dependencies {
     testConfig(group: 'com.oracle.emcpssf.integTest', name: 'savedsearch-tools-integ-tests', version: '0.1'){
 exclude('module':'groovy')
 }
+testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
+
 configurations{
 restAssured.exclude module: 'groovy'
 }
-
 }
-     task UPDATETest(type:EMTest){
+task copyDependencies(type: Copy) {
+    from configurations.lrgConfig
+    into System.env.T_WORK
+}
+task small_deploy_3n_block(type: EMTest) {
+    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
+    options.suiteXmlBuilder().suite('name': 'lrgemcpdf_dev_test_3n') {
+        test('name': 'emaas_setup_small_deploy') {
+            classes([:]) {
+                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
+                    methods([:]) {
+                        'include' ('name': 'setupEmaasSmallDeploy')
+                    }
+                }
+        //      'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSanityTests')
+            }
+        }
+    }
+    useWebdriver = true
+    useRestAssured = true
+}
+
+
+
+
+
+
+
+
+     task UPDATETest(type:EMTest,dependsOn: small_deploy_3n_block){
 include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/*'
 include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/common/*'
 include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/updatesearchexception/*'
 }
-     task emcpssf_update_test (dependsOn:UPDATETest)
+
+task small_deploy_3n_cleanup(type: EMTest) {
+    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
+    options.suiteXmlBuilder().suite('name': 'lrgemctas_uitsts_3n') {
+        test('name': 'emaas_setup_small_deploy') {
+            classes([:]) {
+                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
+                    methods([:]) {
+                        'include' ('name': 'logCollectionAndPostCleanup')
+                    }
+                }
+            }
+        }
+    }
+ mustRunAfter ([small_deploy_3n_block,UPDATETest])
+}
+
+task emcpssf_update_test_3n (dependsOn: [UPDATETest, small_deploy_3n_cleanup])
