--- a/savedsearch-web/.classpath
+++ b/savedsearch-web/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/test/java"/>
-	<classpathentry kind="src" path="src/integTest/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="oracle.eclipse.tools.weblogic.lib.application/savedsearch-ee"/>
@@ -13,7 +12,7 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-client-1.17.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-core-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-json-1.17.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-multipart-1.17.1-12.1.2-0-0.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-multipart-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-server-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-servlet-1.17.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jettison-1.3.4.jar"/>
@@ -46,5 +45,6 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-api-2.0.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-core-2.0.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/emaas-platform-tenant-sdk-0.2.jar"/>
+	<classpathentry kind="lib" path="/scratch/cawei/em-qatool-os-webdriver-1.0.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
