--- a/tests/suites/emcpssf_qa_test_3n.gradle
+++ b/tests/suites/emcpssf_qa_test_3n.gradle
@@ -97,7 +97,7 @@ include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/navigations/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/search/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/util/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/widget/*"
-
+//useWebdriver = true
 
 // include "oracle.sysman.emSDK.emaas.platform.savedsearch.ws.*"
         useRestAssured=true
