--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.12'){transitive = false}
     compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.12'){transitive = false}
     compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
+    compile(group: 'com.oracle.emaas.emdi', name: 'em-qatool-os-webdriver', version: '1.0.4') {transitive=false}
    }
 
 build.dependsOn integTestJar
