--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -7,7 +7,7 @@ apply from: 'test.gradle'
 buildscript {
     repositories {
         maven {
-            url = "${artifactory_contextUrl}/repo"
+            url = "${artifactory_contextUrl}/emaas-virtual"
         }
     }
     dependencies {
@@ -17,12 +17,16 @@ buildscript {
 
 repositories {
     maven {
-        url = "${artifactory_contextUrl}/repo"
+        url = "${artifactory_contextUrl}/emaas-virtual"
     }
 }
 
 publishing {
     publications {
+/*savedsearchCore(MavenPublication) {
+            from components.java
+        }
+*/
         integTest(MavenPublication) {
             setArtifactId(project.name + '-' + integTestJar.appendix)
             artifact integTestJar.archivePath
@@ -48,7 +52,9 @@ publishing {
     }
 }    
 
-
+/*artifactoryPublish{
+publications('savedsearchCore')
+}*/
 sourceSets {
                             test{
                                 java {
