--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -85,7 +85,7 @@ repositories {
     /* Looks into local maven repository for artifacts */
     mavenLocal()
     maven {
-        url = "${artifactory_contextUrl}/repo"
+        url = "${artifactory_contextUrl}/emaas-virtual"
     }
 }
 publishing {
@@ -117,7 +117,7 @@ publishing {
 buildscript {
     repositories {
         maven {
-            url = "${artifactory_contextUrl}/repo"
+            url = "${artifactory_contextUrl}/emaas-virtual"
         }
     }
     dependencies {
