--- a/tests/suites/emcpssf_dev_test_3n.gradle
+++ b/tests/suites/emcpssf_dev_test_3n.gradle
@@ -87,9 +87,27 @@ task small_deploy_3n_block(type: EMTest) {
 
 
 
-     task DEVTest(type:EMTest,dependsOn: small_deploy_3n_block){
-include "oracle/sysman/emaas/savedsearch/*"
-useRestAssured =true
+     task DEVTest(type:EMTest,dependsOn: small_deploy_3n_block){	
+		
+	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
+	include "oracle/sysman/emaas/savedsearch/JSONUtilTest.class"
+	include "oracle/sysman/emaas/savedsearch/EntityJsonUtilTest.class"	
+	include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"		
+	include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
+	include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
+	include "oracle/sysman/emaas/savedsearch/searchParamTest.class"
+	include "oracle/sysman/emaas/savedsearch/searchTest.class"
+	include "oracle/sysman/emaas/savedsearch/CategoryManagerTest.class"
+	include "oracle/sysman/emaas/savedsearch/searchManagerTest.class"
+	include "oracle/sysman/emaas/savedsearch/VersionManagerTest.class"
+	include "oracle/sysman/emaas/savedsearch/ExceptionTest.class"
+	include "oracle/sysman/emaas/savedsearch/CategoryDetailsTest.class"
+	include "oracle/sysman/emaas/savedsearch/ImportTest.class"
+	include "oracle/sysman/emaas/savedsearch/MultitenentFolderTest.class"
+	include "oracle/sysman/emaas/savedsearch/MultitenentCategoryTest"
+	include "oracle/sysman/emaas/savedsearch/MultitenentSearchTest.class"
+	include "oracle/sysman/emaas/savedsearch/Cleanup.class"
+	useRestAssured =true
 }
 task small_deploy_3n_cleanup(type: EMTest) {
     onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
