JIRA:EMCPSSF-151 - there was no version for ear file, which make the ear file w/o version number & deploy-list.xml could not pack ear in the tgz causing deployment failures

--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -5,12 +5,12 @@ configurations {
     appServer     
 }
 
-//version = '1.0.0'
+version = project.ext.getServiceVersion("SavedSearchService")
 group = 'emaas/applications/savedsearch-framework'
 
 def artifactId = appName 
 def groupId = group 
-def versionNumber = project.ext.getServiceVersion("SavedSearchService")
+def versionNumber = version
 
 ear 
 {
