add modification for deployment

--- a/appServerConfig.config
+++ b/appServerConfig.config
@@ -1,7 +1,7 @@
 environments {
 	dev {
-		serverName = 'slc00bqs.us.oracle.com'
-		port = '7021'
+		serverName = 'slc05mwm.us.oracle.com'
+		port = '7001'
 		adminUser = 'weblogic'
 		adminUserPwd = 'welcome1'
 	}
