--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,7 +1,7 @@
-#Mon, 09 Mar 2015 22:50:20 -0700
+#Wed, 05 Aug 2015 23:40:23 -0700
 
-hostname=slc00bqs.us.oracle.com
-port=7021
+hostname=slc05mwm.us.oracle.com
+port=7001
 #weblogic:password1
 #authToken=Basic d2VibG9naWM6cGFzc3dvcmQx
 #weblogic:welcome1
