--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -1,6 +1,6 @@
 jar.archiveName='emcpssf_dev_test.jar'
 group = 'com.oracle.emaas.emcpssf'
-version = '1.0.1'
+version = '1.0.11'
 
 sourceSets {
     integTest {
@@ -12,7 +12,7 @@ sourceSets {
 
 task integTestJar (type:Jar) {
     from sourceSets.integTest.output
-    appendix = 'integ-tests'
+    appendix = 'integ-tests-sec'
 }
 dependencies {
 	lrgConfig project(':savedsearch-entities'){ transitive = false }
