--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -11,11 +11,7 @@ sourceSets {
 
 task integTestJar (type:Jar) {
     from sourceSets.integTest.output
-<<<<<<< HEAD
-    appendix = 'integ-tests-security'
-=======
-    appendix = 'integ-tests-sec'
->>>>>>> emcpssf183_sb
+    appendix = 'integ-tests-exception'
 }
 dependencies {
 lrgConfig project(':savedsearch-web'){ transitive = false } 
