--- a/savedsearch-schema/build.gradle
+++ b/savedsearch-schema/build.gradle
@@ -1,51 +1,27 @@
-apply plugin: 'artifactory' 
- 
-// Override default artifactory ID for publishing through artifactory 
-ext.archivesBaseName = archiveBaseName 
- 
-// SQL Source directories 
-ext.sqlDir = file('src/main/sql')
-version = project.ext.getServiceVersion("SavedSearchService") 
- 
-ext.schemaDistDir = "${serviceDistDir}/${archiveBaseName}" 
- 
-// Default tasks 
-defaultTasks 'dist' 
- 
-configurations { 
-    archives 
-} 
- 
-/** 
- * Copies the schema creation scripts to the gloabl emaas deployment directory 
- */  
-task dist(type: Sync) {     
-    from 'src/main/sql', { 
-        include  '**/*.sql' 
-    }             
-		println "Files copied successfully to ${schemaDistDir}"  			
-    into "${schemaDistDir}" 
-} 
- 
-/** 
- * Builds a GZip archive that contains the schema creation scripts 
- */   
-task buildZip(type:Tar) { 
-    dependsOn   dist 
-     
-    compression = 'gzip' 
-     
-    baseName = archiveBaseName 
-    version = project.version 
-     
-    from schemaDistDir, { 
-        into archiveBaseName 
-    } 
-     
-    destinationDir = buildDir 
-} 
+apply plugin: 'artifactory'
+apply plugin: 'maven'
+
+// Override default artifactory ID for publishing through artifactory
+ext.archivesBaseName = archiveBaseName
+ext.schemaDistDir = "src/main"
+
+println 'schemaDistDir is ' + schemaDistDir
+println 'archiveBaseName is ' + archiveBaseName
+
+configurations {
+    archives
+}
 
 configurations.archives.artifacts.clear()
-artifacts { 
-    archives buildZip 
-} 
+
+task buildschematar(type: Tar) {
+	compression = Compression.GZIP
+	destinationDir = buildDir
+	baseName = archiveBaseName
+	version = project.ext.getServiceVersion("SavedSearchService")
+	from schemaDistDir
+}
+
+artifacts {
+    archives buildschematar
+}
