--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -1,7 +1,7 @@
 jar.archiveName='emcpssf_dev_test.jar'
 group = 'com.oracle.emaas.emcpssf'
-version = '1.0.1'
-
+//version = '1.0.1'
+apply plugin: 'gavsetting'
 sourceSets {
     integTest {
         java.srcDir 'src/integTest/java'
