--- a/tests/suites/emcpssf_dev_test_3n.gradle
+++ b/tests/suites/emcpssf_dev_test_3n.gradle
@@ -50,7 +50,7 @@ repositories {
             url = "${artifactory_contextUrl}/emaas-virtual" }
     }
 dependencies {
-    testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core-integ-tests', version: '1.0.1'){
+    testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core-integ-tests-exversion', version: '1.0.12'){
 exclude('module':'groovy')
 }
 testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
@@ -111,6 +111,7 @@ task small_deploy_3n_block(type: EMTest) {
 	include "oracle/sysman/emaas/savedsearch/TenantDataLeakTest.class"
 	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/SearchManagerTestMockup.class"
+	include "oracle/sysman/emaas/savedsearch/SavedSearchDbExceptionTest.class"
 	 useRestAssured =true
 ext.set("testType", "unit")
 
