--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -12,7 +12,7 @@ sourceSets {
 
 task integTestJar (type:Jar) {
     from sourceSets.integTest.output
-    appendix = 'integ-tests-exception'
+    appendix = 'integ-tests-exception21'
 }
 dependencies {
 	lrgConfig project(':savedsearch-entities'){ transitive = false }
