--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'maven'
 apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
-/*group = 'com.oracle.emaas.emcpssf'*/
+group = 'com.oracle.emaas.emcpssf'
 buildscript {
     repositories {
         maven {
@@ -12,9 +12,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
-	
- /*    classpath group: 'com.oracle.emaas.emdi', name: 'GAVPlugin', version: '1.0.0+' */
+        classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true	
+	classpath group: 'com.oracle.emaas.emdi', name: 'GAVPlugin', version: '1.0.0+' 
     }
 }
 
