--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -1,7 +1,7 @@
 //jar.archiveName='emcpssf_qa_test.jar'
 group = 'com.oracle.emaas.emcpssf'
-version = '1.0.12'
-//apply plugin: 'gavsetting'
+//version = '1.0.12'
+apply plugin: 'gavsetting'
 sourceSets {
     integTest {
         java.srcDir 'src/integTest/java'
