--- a/tests/suites/emcpssf_web_unit_test.gradle
+++ b/tests/suites/emcpssf_web_unit_test.gradle
@@ -24,6 +24,9 @@
  */
 buildscript {
     repositories {
+maven {
+        url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+    }
         maven {
             url = "${artifactory_contextUrl}/emaas-virtual" }
     }
@@ -47,7 +50,7 @@ import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 repositories {
 	mavenLocal()
         maven {
-            url = "${artifactory_contextUrl}/emaas-virtual" }
+            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
 dependencies {
     testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-web-integ-tests', version: '1.0+'){
@@ -58,15 +61,6 @@ exclude('module':'groovy')
 configurations{
 restAssured.exclude module: 'groovy'
 }
-}
-
-
-
-
-
-task copyDependencies(type: Copy) {
-    from configurations.lrgConfig
-    into System.env.T_WORK
 }
 
 
