--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,5 @@ org.gradle.jvmargs=-XX:MaxPermSize=2g
 testinfraVersion=1.1+
 artifactory_repoName=emaas-virtual
 artifactory_repoKey=emaas-sandbox-local
+publishGroup=com.oracle.emaas.emcpssf
+
