--- a/build.gradle
+++ b/build.gradle
@@ -186,7 +186,7 @@ project(':savedsearch-web'){
 	
 	dependencies{			
 		compile project(':savedsearch-entities')
-		compile project(':savedsearch-core')
+		compile (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+')
 				
 		compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
     		compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
