--- a/gradle.properties
+++ b/gradle.properties
@@ -26,4 +26,4 @@ testinfraVersion=1.1+
 artifactory_repoName=emaas-virtual
 artifactory_repoKey=emaas-sandbox-local
 publishGroup=com.oracle.emaas.emcpssf
-
+group=com.oracle.emaas.emcpssf
