--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -1,11 +1,8 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: 'maven'
 apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
-group = 'com.oracle.emaas.emcpssf'
-apply plugin: 'artifactory'
 apply plugin: 'artifactory-publish'
 
 buildscript {
@@ -26,17 +23,16 @@ repositories {
         url = "${artifactory_contextUrl}/emaas-virtual"
     }
 }
-
+project.publishGroup1='com.oracle.emaas.emcpssf.test';
 publishing {
     publications {
-savedsearchCore(MavenPublication) {
-            from components.java
-        }
-
         integTest(MavenPublication) {
             setArtifactId(project.name + '-' + integTestJar.appendix)
             artifact integTestJar.archivePath
-            pom.withXml {
+            
+	    version project.version
+            groupId  project.publishGroup1
+ pom.withXml {
                 def dependencies = asNode().appendNode('dependencies')
                 configurations.testConfig.getResolvedConfiguration().getFirstLevelModuleDependencies().each {
                     def dependency = dependencies.appendNode('dependency')
@@ -84,7 +80,6 @@ task runDEVTestSuite(type: Test){
 dependencies {
 	compile project(':savedsearch-entities'){transitive = false}
         compile (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+'){transitive=false}
-
 	testRuntime(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
 	testCompile(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
 	compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
@@ -92,8 +87,6 @@ dependencies {
 	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){transitive = false}
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
 	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){transitive = false}
-//	compile(group: 'javax', name: 'ejb', version: '3.2.0')
-//	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.8.8'){transitive = false}
     compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
     compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
     compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
