--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -11,22 +11,7 @@ apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
 
 jar.archiveName='emcpssf_qa_test.jar'
-group = 'com.oracle.emaas.emcpssf'
-//version = '1.0.1'
 
-
-buildscript {
-    repositories {
-        maven {
-            url = "${artifactory_contextUrl}/emaas-virtual"
-        }
-    }
-    dependencies {
-        classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
-	classpath group: 'com.oracle.emaas.emdi', name: 'GAVPlugin', version: '1.0.0+'		
-        
-}  
-}
 
 repositories {
     maven {
@@ -35,8 +20,6 @@ repositories {
 }
 
 configurations {
-//	integTestCompile.extendsFrom testCompile
-//	integTestRuntime.extendsFrom testRuntime
 	restDoc
 	enunciateCore
 	ftpAntTask
@@ -71,15 +54,15 @@ sourceSets {
 
 }
 
-
+project.publishGroup1='com.oracle.emaas.emcpssf.test';
 publishing {
     publications {
-savedsearchWeb(MavenPublication) {
-            from components.java
-        }
         integTest(MavenPublication) {
             setArtifactId(project.name + '-' + integTestJar.appendix)
-            artifact integTestJar.archivePath
+            version project.version
+            groupId  project.publishGroup1
+
+	    artifact integTestJar.archivePath
             pom.withXml {
                 def dependencies = asNode().appendNode('dependencies')
                 configurations.testConfig.getResolvedConfiguration().getFirstLevelModuleDependencies().each {
