--- a/tests/suites/emcpssf_web_unit_test.gradle
+++ b/tests/suites/emcpssf_web_unit_test.gradle
@@ -28,7 +28,7 @@ maven {
         url = "${PUB_MAVEN_MY_MAVEN_REPO}"
     }
         maven {
-            url = "${artifactory_contextUrl}/emaas-virtual" }
+            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
     dependencies {
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
@@ -36,7 +36,7 @@ maven {
 }
 repositories {
     maven {
-        url = "${artifactory_contextUrl}/emaas-virtual"
+        url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}"
     }
 }
 apply plugin: 'TestInfraPlugin'
@@ -47,11 +47,6 @@ import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
  
  
 /* Your lrg specific code would come here */
-repositories {
-	mavenLocal()
-        maven {
-            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
-    }
 dependencies {
     testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-web-integ-tests', version: '1.0+'){
 exclude('module':'groovy')
@@ -71,9 +66,6 @@ include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/exception/*"
 
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/util/*"
 
-//useWebdriver = true
-
-// include "oracle.sysman.emSDK.emaas.platform.savedsearch.ws.*"
         useRestAssured=true
 ext.set("testType", "integration")
 }
