--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
 	apply plugin: 'DevInfraPlugin' 
       	apply plugin: 'maven-publish'
 	apply plugin: 'TestInfraPlugin'
-
+        apply plugin: 'gavsetting'
 
  publishing {
         if (project.hasProperty('publishJar') && Boolean.valueOf(project.publishJar)) {
@@ -231,8 +231,7 @@ project(':savedsearch-web'){
 	
 	dependencies{			
 		compile project(':savedsearch-entities')
-		compile  (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') 
-				
+		compile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') 
 		compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
     		compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
 		compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+') 
@@ -280,7 +279,7 @@ publishing {
         if (project.tasks.findByName('lrgMetadataZip')) {
             // Publication for publishing lrg metadata
             lrgMetadata(MavenPublication) {
-                groupId 'com.oracle.emaas.emcpssf' // You may use "groupId project.group + '.test'", if your project.group value is 'com.oracle.emaas.emcpssf'
+                groupId 'com.oracle.emaas.emcpssf.test' // You may use "groupId project.group + '.test'", if your project.group value is 'com.oracle.emaas.emcpssf'
                 artifact lrgMetadataZip
                 setArtifactId(lrgMetadataZip.baseName)
             }
