--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -9,15 +9,11 @@ ext.restDocOutputDir = "${restDocRootDir}"
 apply plugin: 'maven-publish'
 apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
+apply plugin: 'artifactory-publish'
 
 jar.archiveName='emcpssf_qa_test.jar'
 
 
-repositories {
-    maven {
-        url = "${artifactory_contextUrl}/emaas-virtual"
-    }
-}
 
 configurations {
 	restDoc
@@ -57,10 +53,6 @@ sourceSets {
 project.publishGroup1='com.oracle.emaas.emcpssf.test';
 publishing {
     publications {
-	savedsearchWeb(MavenPublication) {
-            from components.java
-        } 
-
 
         integTest(MavenPublication) {
             setArtifactId(project.name + '-' + integTestJar.appendix)
@@ -170,10 +162,8 @@ sourceSets {
  }
 dependencies {
 	providedCompile project(':savedsearch-entities'){transitive = false}
-//	providedCompile project(':savedsearch-core'){transitive = false}
-	providedCompile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+')  {transitive = false}
+	providedCompile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') {transitive = false}
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
-//	providedCompile(group: 'javax', name: 'ejb', version: '3.2.0')
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
 	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
