--- a/tests/suites/emcpssf_qa_test_3n.gradle
+++ b/tests/suites/emcpssf_qa_test_3n.gradle
@@ -24,9 +24,7 @@
  */
 buildscript {
     repositories {
-	maven {
-        url = "${PUB_MAVEN_MY_MAVEN_REPO}"
-    }
+
         maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
@@ -48,12 +46,14 @@ import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
  
 /* Your lrg specific code would come here */
 repositories {
-	mavenLocal()
+maven {
+        url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+    }
         maven {
-            url = "${artifactory_contextUrl}/emaas-virtual" }
+            url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
 dependencies {
-    testConfig (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-web-integ-tests', version: '1.0.0+'){
+    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){
 exclude('module':'groovy')
 }
  testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
